fix toggle button z-index to show on top of hero in readmore pages

--- a/style/style.css
+++ b/style/style.css
@@ -719,6 +719,7 @@ footer .toggle-and-btt-cont {
   position: fixed;
   right: 10px;
   bottom: 10px;
+  z-index: 2;
 }
 .back-to-top {
   background-color: var(--SPAN-FONT-COLOR);
